--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         //function b with global variable
         var data = "50";
         function a() {
-            document.write("Global Variable =>");
+            document.write("Global Variable =");
             document.writeln(data);
         }
 //functio b with local variable 
         function b() {
             var data = "100";
             document.write("<br>")
-            document.write("Local Variable =>");
+            document.write("Local Variable =");
             document.writeln(data);
         }
         a();
